--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./components/Tabs/Tabs.js" async></script>
-    <!-- <script src="./components/Carousel/Carousel.js" async></script> -->
+    <script src="./components/Carousel/Carousel.js" async></script>
   </head>
 
   <body>
@@ -52,10 +52,10 @@
     <!-- CAROUSEL COMPONENT -->
     <div class="carousel">
       <div class="left-button"><</div>
-      <img src="./assets/carousel/mountains.jpeg" />
-      <img src="./assets/carousel/computer.jpeg" />
-      <img src="./assets/carousel/trees.jpeg" />
-      <img src="./assets/carousel/turntable.jpeg" />
+      <img class="cPhoto" src="./assets/carousel/mountains.jpeg" />
+      <img class="cPhoto" src="./assets/carousel/computer.jpeg" />
+      <img class="cPhoto" src="./assets/carousel/trees.jpeg" />
+      <img class="cPhoto" src="./assets/carousel/turntable.jpeg" />
       <div class="right-button">></div>
     </div>
 
